# api-rs

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  sqlite.db
.github/workflows/: azure-container-webapp.yml
migrations/: 20240524042019_users.sql
src/: main.rs
